tests/typing/good/testfile-type_parameter-6.scala

class A { def m() : Unit = return }
object Main { def main(args: Array[String]) { } }
