tests/typing/bad/testfile-no_return3-1.scala
class A {
    def f() : Int = {
	if (true) () else return 0
    }
}
object Main { def main(args: Array[String]) { } }
